[gd_scene load_steps=23 format=2]

[ext_resource path="res://Game Play/Normal Level/NormalLevelQn2Updated.gd" type="Script" id=1]
[ext_resource path="res://sprites/tower/internal tower tiles bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/rectangular button.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons or icons/rectangular popup.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/x button.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons or icons/back button.png" type="Texture" id=6]
[ext_resource path="res://Game Play/Normal Level/TowerDoorOpen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/King.tscn" type="PackedScene" id=8]
[ext_resource path="res://Game Play/Normal Level/TowerBricks.tscn" type="PackedScene" id=9]
[ext_resource path="res://Game Play/Normal Level/NormalLvlDoorClosed.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/tower/star.png" type="Texture" id=11]
[ext_resource path="res://Player/Huntress.tscn" type="PackedScene" id=12]
[ext_resource path="res://Player/Archer.tscn" type="PackedScene" id=13]
[ext_resource path="res://Player/Samurai.tscn" type="PackedScene" id=14]
[ext_resource path="res://Audio/WinMusic.tscn" type="PackedScene" id=15]
[ext_resource path="res://Audio/LevelMusic.tscn" type="PackedScene" id=16]
[ext_resource path="res://Audio/LoseMusic.tscn" type="PackedScene" id=17]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=18]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 18 )

[node name="NormalLevelQn2" type="CanvasLayer"]
script = ExtResource( 1 )
King = ExtResource( 8 )
Archer = ExtResource( 13 )
Huntress = ExtResource( 12 )
Samurai = ExtResource( 14 )

[node name="TowerBackground" type="TextureRect" parent="."]
margin_left = -2.1189
margin_right = 1913.88
margin_bottom = 1078.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerBricks3" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 736.877, 1030.94 )

[node name="TowerBricks4" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1034.18, 1030.94 )

[node name="TowerBricks5" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1612.13, 1030.94 )

[node name="TowerBricks6" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1902.3, 1028.56 )

[node name="TowerBricks7" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1321.97, 1033.31 )

[node name="TowerBricks2" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 439.575, 1028.56 )

[node name="TowerBricks" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 149.408, 1030.94 )

[node name="TowerBricks8" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 80.4344, 957.204 )

[node name="TowerBricks9" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 375.358, 954.826 )

[node name="TowerBricks10" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 660.767, 954.826 )

[node name="TowerBricks11" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 955.691, 954.826 )

[node name="TowerBricks12" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1248.24, 957.204 )

[node name="TowerBricks13" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1545.54, 954.826 )

[node name="TowerBricks14" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1838.09, 954.826 )

[node name="Qn2" type="TextureRect" parent="."]
margin_left = 247.0
margin_top = 50.0
margin_right = 1682.0
margin_bottom = 237.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsCorrectMsg" type="TextureButton" parent="Qn2"]
margin_left = 477.775
margin_top = 419.0
margin_right = 944.775
margin_bottom = 558.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msg" type="Label" parent="Qn2/AnsCorrectMsg"]
margin_left = 111.0
margin_top = 41.0
margin_right = 396.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "You Got It!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsWrongMsg" type="TextureButton" parent="Qn2"]
margin_left = 477.489
margin_top = 417.762
margin_right = 944.489
margin_bottom = 556.762
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msg" type="Label" parent="Qn2/AnsWrongMsg"]
margin_left = 167.409
margin_top = 40.9797
margin_right = 299.409
margin_bottom = 92.9797
custom_fonts/font = SubResource( 1 )
text = "Oops!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="Qn2"]
margin_left = 877.531
margin_top = 682.591
margin_right = 968.531
margin_bottom = 755.591
rect_rotation = -180.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsButton" type="TextureButton" parent="Qn2"]
margin_left = 569.696
margin_top = 602.652
margin_right = 653.696
margin_bottom = 687.652
texture_normal = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NormalLvlDoorClosed" parent="." instance=ExtResource( 10 )]
position = Vector2( 1726.86, 837.163 )

[node name="NormalLvlDoorOpen" parent="." instance=ExtResource( 7 )]
position = Vector2( 1730.84, 824.846 )

[node name="QuestionBody" type="Label" parent="."]
margin_left = 464.0
margin_top = 60.0
margin_right = 1452.0
margin_bottom = 211.0
custom_fonts/font = SubResource( 2 )
text = "
"
align = 3
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionA" type="TextureButton" parent="."]
margin_left = 406.0
margin_top = 365.0
margin_right = 570.0
margin_bottom = 452.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionB" type="TextureButton" parent="."]
margin_left = 692.271
margin_top = 363.33
margin_right = 856.271
margin_bottom = 450.33
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionC" type="TextureButton" parent="."]
margin_left = 980.445
margin_top = 363.33
margin_right = 1144.45
margin_bottom = 450.33
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionD" type="TextureButton" parent="."]
margin_left = 1247.43
margin_top = 363.33
margin_right = 1411.43
margin_bottom = 450.33
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Label" parent="."]
margin_left = 455.0
margin_top = 297.0
margin_right = 470.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 2 )
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Label" parent="."]
margin_left = 733.104
margin_top = 293.844
margin_right = 748.104
margin_bottom = 324.844
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="Label" parent="."]
margin_left = 1025.52
margin_top = 290.963
margin_right = 1040.52
margin_bottom = 321.963
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="Label" parent="."]
margin_left = 1292.28
margin_top = 288.524
margin_right = 1307.28
margin_bottom = 319.524
custom_fonts/font = SubResource( 2 )
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explanation" type="TextureButton" parent="."]
visible = false
margin_left = 334.049
margin_top = 257.216
margin_right = 1537.05
margin_bottom = 725.216
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msg" type="Label" parent="Explanation"]
margin_left = 117.0
margin_top = 61.0
margin_right = 1080.0
margin_bottom = 402.0
custom_fonts/font = SubResource( 3 )
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Explanation"]
margin_left = 1061.07
margin_top = 38.4207
margin_right = 1117.07
margin_bottom = 85.4207
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="."]
margin_left = 1651.88
margin_top = 92.3058
margin_right = 1697.88
margin_bottom = 144.306
custom_fonts/font = SubResource( 4 )
align = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelMusic" parent="." instance=ExtResource( 16 )]

[node name="WinMusic" parent="." instance=ExtResource( 15 )]

[node name="LoseMusic" parent="." instance=ExtResource( 17 )]

[connection signal="pressed" from="Qn2/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Qn2/AnsButton" to="." method="_on_ExplanationButton_pressed"]
[connection signal="pressed" from="OptionA" to="." method="_on_A_pressed"]
[connection signal="pressed" from="OptionB" to="." method="_on_B_pressed"]
[connection signal="pressed" from="OptionC" to="." method="_on_C_pressed"]
[connection signal="pressed" from="OptionD" to="." method="_on_D_pressed"]
[connection signal="pressed" from="Explanation/Exit" to="." method="_on_ExitButton_pressed"]
